--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/graphql": "^7.6.0",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.0.0",
+    "apollo-server-express": "^2.16.1",
+    "graphql": "^15.3.0",
+    "graphql-tools": "^6.0.15",
     "mongoose": "^5.9.26",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
